# ldd-test

./: .gitignore  CMakeLists.txt
100/: Makefile  mychardev.c
